tests/valid/lifetime/hrt_call_function_param.facet
fn call_it<'x>(
    f: unrestricted for<'a> fn(unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize,
    r: unrestricted &'x unrestricted isize
) -> unrestricted &'x unrestricted isize {
    (f r)
}
