tests/invalid/lifetime/hrt_lifetime_leak.facet
fn bad(f: unrestricted for<'a> fn() -> unrestricted &'a unrestricted isize) -> unrestricted () {
    (f)
}
